Fixed <th> alignment after removal of reboot file

--- a/etc/bootstrap-custom-build.scss
+++ b/etc/bootstrap-custom-build.scss
@@ -30,8 +30,17 @@ $container-max-widths: (
 /* override the !default vars with the values we set above */
 
 @import "../node_modules/bootstrap/scss/root";
+
 // @import "../node_modules/bootstrap/scss/reboot";
 // @import "../node_modules/bootstrap/scss/type";
+
+// Backported from the reboot.scss file
+th {
+  // Matches default `<td>` alignment by inheriting from the `<body>`, or the
+  // closest parent with a set `text-align`.
+  text-align: inherit;
+}
+
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
